force-app/main/default/objects/AccountProjectBenchmark__c/AccountProjectBenchmark__c.object-meta.xml
<CustomObject>
    <description>The Benchmark scores for an Account/Project Combination</description>
    <label>Account Project Benchmark</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Project Benchmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>