force-app/main/default/objects/AccountProjectBenchmark__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account associated with the benchmark Score</description>
    <inlineHelpText>Account associated with the benchmark Score</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account must be a Customer or Former Customer</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Customer, Former Customer</value>
        </filterItems>
        <infoMessage>Account must be a Customer or Former Customer</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Project Benchmarks</relationshipLabel>
    <relationshipName>AccountProjectBenchmarksAccount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>