force-app/main/default/objects/AccountProjectBenchmark__c/fields/EvntBenchmarkScore__c.field-meta.xml
<CustomField>
    <fullName>EvntBenchmarkScore__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>Event Benchmark Score</description>
    <inlineHelpText>Event Benchmark Score</inlineHelpText>
    <label>Event Benchmark Score</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>