force-app/main/default/objects/AccountProjectBenchmark__c/fields/EvntBenchmarkSignal__c.field-meta.xml
<CustomField>
    <fullName>EvntBenchmarkSignal__c</fullName>
    <description>Event Benchmark Signal</description>
    <inlineHelpText>Event Benchmark Signal</inlineHelpText>
    <label>Event Benchmark Signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BenchmarkSignal</valueSetName>
    </valueSet>
</CustomField>