force-app/main/default/objects/AccountProjectBenchmark__c/fields/MemBenchmarkScore__c.field-meta.xml
<CustomField>
    <fullName>MemBenchmarkScore__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>Membership Benchmark Score</description>
    <inlineHelpText>Membership Benchmark Score</inlineHelpText>
    <label>Membership Benchmark Score</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>