force-app/main/default/objects/AccountProjectBenchmark__c/fields/MemBenchmarkSignal__c.field-meta.xml
<CustomField>
    <fullName>MemBenchmarkSignal__c</fullName>
    <description>Membership Benchmark Signal</description>
    <inlineHelpText>Membership Benchmark Signal</inlineHelpText>
    <label>Membership Benchmark Signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BenchmarkSignal</valueSetName>
    </valueSet>
</CustomField>