force-app/main/default/objects/AccountProjectBenchmark__c/fields/MembershipLevel__c.field-meta.xml
<CustomField>
    <fullName>MembershipLevel__c</fullName>
    <defaultValue>&quot;Non Member&quot;</defaultValue>
    <description>The Membership Level Related to the Score</description>
    <inlineHelpText>The Membership Level Related to the Score</inlineHelpText>
    <label>Membership Level</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>