force-app/main/default/objects/AccountProjectBenchmark__c/fields/TandCBenchmarkScore__c.field-meta.xml
<CustomField>
    <fullName>TandCBenchmarkScore__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>Training and Cert Benchmark Score</description>
    <inlineHelpText>Training and Cert Benchmark Score</inlineHelpText>
    <label>Training and Cert Benchmark Score</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>