force-app/main/default/objects/AccountProjectBenchmark__c/fields/TandCBenchmarkSignal__c.field-meta.xml
<CustomField>
    <fullName>TandCBenchmarkSignal__c</fullName>
    <description>Training and Cert Benchmark Signal</description>
    <inlineHelpText>Training and Cert Benchmark Signal</inlineHelpText>
    <label>Training and Cert Benchmark Signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BenchmarkSignal</valueSetName>
    </valueSet>
</CustomField>