force-app/main/default/objects/AccountProjectBenchmark__c/validationRules/EvntBenchmarkScoreGtZero.validationRule-meta.xml
<ValidationRule>
    <fullName>EvntBenchmarkScoreGtZero</fullName>
    <active>true</active>
    <description>Event Benchmark Score must be &gt;=0</description>
    <errorConditionFormula>EvntBenchmarkScore__c &lt;  0</errorConditionFormula>
    <errorMessage>Event Benchmark Score must be &gt;= 0</errorMessage>
</ValidationRule>