force-app/main/default/objects/AccountProjectBenchmark__c/validationRules/MemBenchmarkScoreGtZero.validationRule-meta.xml
<ValidationRule>
    <fullName>MemBenchmarkScoreGtZero</fullName>
    <active>true</active>
    <description>Membership Benchmark Score must be &gt;= 0</description>
    <errorConditionFormula>MemBenchmarkScore__c &lt; 0</errorConditionFormula>
    <errorMessage>Membership Benchmark Score must be &gt;= 0</errorMessage>
</ValidationRule>