force-app/main/default/objects/AccountProjectBenchmark__c/validationRules/TandCBenchmarkScoreGtZero.validationRule-meta.xml
<ValidationRule>
    <fullName>TandCBenchmarkScoreGtZero</fullName>
    <active>true</active>
    <description>Training and Certification Benchmark Score must be &gt;= 0</description>
    <errorConditionFormula>TandCBenchmarkScore__c &lt; 0</errorConditionFormula>
    <errorMessage>Training and Certification Benchmark Score must be &gt;= 0</errorMessage>
</ValidationRule>